# build-server-protocol

./: Cargo.toml  README.md
bsp-server/: Cargo.toml  README.md
bsp-server/src/: error.rs  io_thread.rs  lib.rs  message.rs  msg.rs  noti.rs  notification.rs  req_queue.rs  request.rs  response.rs  tests.rs  transporter.rs
bsp-server/src/request/: id.rs
bsp-types/: Cargo.toml  README.md
bsp-types/src/: bt_capabilities.rs  bt_clean_cache.rs  bt_compile.rs  bt_dependency_modules.rs  bt_dependency_sources.rs  bt_did_change.rs  bt_identifier.rs  bt_inverse_sources.rs  bt_resources.rs  bt_run.rs  bt_sources.rs  bt_tag.rs  bt_test.rs  client_capabilities.rs  debug_session_start.rs  initialize_params.rs  initialize_result.rs  language.rs  lib.rs  log_message.rs  message_type.rs  providers.rs  publish_diagnostics.rs  server.rs  server_capabilities.rs  show_message.rs  task.rs  task_id.rs  workspace_build_targets.rs
bsp-types/src/task/: finish.rs  id.rs  kind.rs  progress.rs  start.rs  status.rs
src/: bt_capabilities.rs  bt_clean_cache.rs  bt_compile.rs  bt_dependency_modules.rs  bt_dependency_sources.rs  bt_did_change.rs  bt_identifier.rs  bt_inverse_sources.rs  bt_resources.rs  bt_run.rs  bt_sources.rs  bt_test.rs  client_capabilities.rs  debug_session_start.rs  initialize_params.rs  initialize_result.rs  language.rs  lib.rs  log_message.rs  publish_diagnostics.rs  server.rs  server_capabilities.rs  show_message.rs  task_id.rs  workspace_build_targets.rs
