[package]
name = "build-server-protocol"
version = "0.1.0"
edition = "2021"
description = "Build Server Protocol Server, Client, Types"

[dependencies]
lsp-types             = "0.93.0"
serde                 = { version = "1.0",    features = ["derive"]  }
serde_json            = { version = "1.0.79" }

jsonrpc-core          = { version = "18.0.0", optional = true }
jsonrpc-derive        = { version = "18.0.0", optional = true } 
jsonrpc-stdio-server  = { version = "18.0.0", optional = true } 
jsonrpc-http-server   = { version = "18.0.0", optional = true } 
jsonrpc-tcp-server    = { version = "18.0.0", optional = true } 
jsonrpc-ws-server     = { version = "18.0.0", optional = true } 

[features]
default    = [ ]
jsonrpc    = [ "jsonrpc-core", "jsonrpc-derive" ]
