[package]
name = "bsp-server"
version = "0.1.0"
edition = "2021"
description = "Build Server Protocol (Server)"

[dependencies]
anyhow                = { version  = "^1.0.42" }
crossbeam-channel     = { version = "0.5.4" }
serde                 = { version = "1.0", features = ["derive"]  }
serde_json            = { version = "1.0.79" }
tracing               = { version = "0.1.34"  }
bsp-types             = { path = "../bsp-types" }
serde_repr            = {version = "0.1.7" }
