[package]
name = "bsp-types"
version = "0.1.2"
edition = "2021"
description = "Build Server Protocol Types"
repository = "https://github.com/tami5/build-server-protocol"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow                = "^1.0.42"
lsp-types             = "0.93.0"
serde                 = { version = "1.0", features = ["derive"]  }
serde_json            = { version = "1.0.79" }
serde_repr            = { version = "0.1.7" }
